crates/nlink-macros/tests/ui/fail/04_invalid_repr.stderr
error: unknown repr "f64"; expected "u8", "u16", or "u32"
 --> tests/ui/fail/04_invalid_repr.rs:4:23
  |
4 | #[genl_command(repr = "f64")]
  |                       ^^^^^
